# sports-planner

./: .gitignore  .gitmodules  build-requirements.txt  build.json  build.txt  dependencies.json  io.github.slaclau.sports-planner.json  main.py  meson.build  meson.options  pyproject.toml  requirements.txt
.github/workflows/: gh-pages.yaml
data/: find_gschemas.sh  io.github.slaclau.sports-planner.desktop.in  io.github.slaclau.sports-planner.tabs.activity-plot.gschema.xml  io.github.slaclau.sports-planner.tabs.curve.gschema.xml  io.github.slaclau.sports-planner.tabs.map.gschema.xml  io.github.slaclau.sports-planner.tabs.overview.gschema.xml  io.github.slaclau.sports-planner.tabs.tab.gschema.xml  io.github.slaclau.sports-planner.tiles.chart.gschema.xml  io.github.slaclau.sports-planner.tiles.metric.gschema.xml  io.github.slaclau.sports-planner.tiles.metrics-list.gschema.xml  io.github.slaclau.sports-planner.tiles.tile.gschema.xml  io.github.slaclau.sports-planner.views.activities.gschema.xml  io.github.slaclau.sports-planner.views.activities.tab.gschema.xml  io.github.slaclau.sports-planner.views.activities.tabs.activity-plot.gschema.xml  io.github.slaclau.sports-planner.views.activities.tabs.curve.gschema.xml  io.github.slaclau.sports-planner.views.activities.tabs.map.gschema.xml  io.github.slaclau.sports-planner.views.activities.tabs.overview.gschema.xml  io.github.slaclau.sports-planner.views.activities.tabs.overview.tile.gschema.xml  io.github.slaclau.sports-planner.views.activities.tabs.overview.tiles.chart.gschema.xml  io.github.slaclau.sports-planner.views.activities.tabs.overview.tiles.metric.gschema.xml  io.github.slaclau.sports-planner.views.activities.tabs.overview.tiles.metrics-list.gschema.xml  meson.build  resources.gresource.xml
data/gtk/: help-overlay.ui  main.ui  menus.ui  sports-planner.cmb
data/gtk/activities/: activities-view.ui  activity-list-item.ui  activity-view.ui  calendar.ui  tab-creation-dialog.ui
data/gtk/plan/: plan-view.ui
sphinx/: Makefile  index.docbook  meson.build
sphinx/source/: api-reference.rst  api.rst  conf.py  graphs.rst  index.rst  meson.build  pytest.rst  userguide.rst
sphinx/source/_templates/: custom-class-template.rst  custom-module-template.rst
sphinx/source/graphviz/: classes.dot  packages.dot
sphinx/source/userguide/: installation.rst  meson.build  metrics.rst
sports_planner/: athlete.py  main.py
sports_planner/gui/: chart.py  dialogues.py  main.py
sports_planner/gui/activities/: activity.py  main.py
sports_planner/gui/performance/: main.py
sports_planner/gui/planning/: main.py
sports_planner/io/: files.py
sports_planner/io/garmin/: workouts.py
sports_planner/io/sync/: base.py  garmin.py
sports_planner/metrics/: __init__.py  activity.py  athlete.py  base.py  calculate.py  coggan.py  garmin.py  govss.py  pmc.py
sports_planner/utils/: logging.py
src/: meson.build
src/sports_planner/: athlete.py  main.py  meson.build
src/sports_planner/gui/: about.py  app.py  chart.py  dialogues.py  logging.py  main.py  status.py  window.py
src/sports_planner/gui/activities/: activity.py  chart.py  main.py  mini_calendar.py  mpl_chart.py  overview.py  tab.py  view.py  viewer.py
src/sports_planner/gui/activities/overview/: chart.py  file_info.py  metric.py  metrics_list.py  overview.py  tile.py
src/sports_planner/gui/performance/: main.py
src/sports_planner/gui/plan/: test.py  view.py
src/sports_planner/gui/planning/: main.py
src/sports_planner/gui/train/: main.py
src/sports_planner/gui/training/: main.py
src/sports_planner/gui/widgets/: base.py
src/sports_planner/io/: files.py
src/sports_planner/io/garmin/: workouts.py
src/sports_planner/io/sync/: base.py  garmin.py
src/sports_planner/metrics/: activity.py  base.py  calculate.py  coggan.py  garmin.py  govss.py  pdm.py  pmc.py  zones.py
src/sports_planner/training/: main.py
src/sports_planner/utils/: format.py  logging.py
