[project]
name = "sports-planner"
version = "0.0.1"
dependencies = ["pandas","numpy", "sweat", "garth"]

[project.optional-dependencies]
doc = ["pylint", "sphinx", "sphinx-pyreverse", "pydata-sphinx-theme"]

[tool.mypy]
# Disallow dynamic typing
disallow_any_unimported = true
# disallow_any_expr = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_explicit = true
disallow_subclassing_any = true

# Disallow untyped definitions and calls
# disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and optional handling
no_implicit_optional = true

# Configuring warnings
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true

# Misc things
strict_equality = true

# Config file
warn_unused_configs = true

[tool.isort]
profile = "black"

[tool.pylint.MAIN]
load-plugins = [
    "pylint.extensions.docparams"
]

[tool.pylint.MESSAGES-CONTROL]
disable = [
    "invalid-name",
    "global-statement",
]
extension-pkg-allow-list = [
	"wx",
]

[tool.flake8]
max-line-length = 88
max-doc-length = 88
docstring-convention = "numpy"
extend-select = [
    "D417",
]
extend-exclude = [
	"src/fortius_ant/_version.py"
]
require-plugins = [
    "flake8-pydocstyle",
    "flake8-pylint",
    "flake8-json",
]
docstring_style = "numpy"
